--- a/frontend/src/app/components/tutorials-list/tutorials-list.component.html
+++ b/frontend/src/app/components/tutorials-list/tutorials-list.component.html
@@ -14,18 +14,8 @@
     <h4>Projects List</h4>
     <ul class="list-group">
       <li class="list-group-item" *ngFor="let project of projects; let i = index"
-        [class.active]="i == currentProjectIndex" (click)="setActiveProject(project, i);isProjectActive(project);">
+        [class.active]="i == currentProjectIndex" (click)="isProjectActive(project, i);">
         {{ project.projectName }}
-        <div *ngIf="currentProject.status == 'online'">
-          <span class= 'material-icons green'>check_circle</span>
-        </div>
-        <div *ngIf="currentProject.status == 'timeout'">
-          <span class= 'material-icons red'>block</span>
-        </div>
-        <div *ngIf="currentProject.status == 'pending'">
-          <span class= 'material-icons yellow'>check_circle</span>
-        </div>
-        
       </li>
   
     </ul>
@@ -34,7 +24,7 @@
     <h4>Device List</h4>
     <ul class="list-group">
       <li class="list-group-item" *ngFor="let device of currentProject.devices; let i = index"
-        [class.active]="i == currentDeviceIndex" (click)="setActiveDevice(device, i)">
+        [class.active]="i == currentDeviceIndex" (click)="isDeviceActive(device, i)">
         {{ device.ip_no }}
         <div *ngIf="device.status == 'online'">
           <span class= 'material-icons green'>check_circle</span>
@@ -53,9 +43,17 @@
     <h4>Config List</h4>
     <ul class="list-group">
       <li class="list-group-item" *ngFor="let config of currentDevice.configs; let i = index"
-        [class.active]="i == currentConfigIndex" (click)="setActiveConfig(config, i)">
+        [class.active]="i == currentConfigIndex" (click)="isConfigActive(config, i)">
         {{ config.appName }}
-      
+        <div *ngIf="config.status == 'online'">
+          <span class= 'material-icons green'>check_circle</span>
+        </div>
+        <div *ngIf="config.status == 'timeout'">
+          <span class= 'material-icons red'>block</span>
+        </div>
+        <div *ngIf="config.status == 'pending'">
+          <span class= 'material-icons yellow'>check_circle</span>
+        </div>
       </li>
     </ul>
   </div>
