--- a/frontend/src/app/components/tutorials-list/tutorials-list.component.css
+++ b/frontend/src/app/components/tutorials-list/tutorials-list.component.css
@@ -6,3 +6,11 @@
 .material-icons.green { color: #7FFF00; }
 .material-icons.red { color: #A52A2A; }
 .material-icons.yellow { color: #FFD700; }
+.material-icons {
+  font-size: 28px;
+}
+.btn-primary
+{
+  color: black;
+  background-color: #FFD700;
+}
