--- a/frontend/src/app/components/tutorial-details/tutorial-details.component.html
+++ b/frontend/src/app/components/tutorial-details/tutorial-details.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
     <div *ngIf="currentProject.id" class="edit-form">
       <h4>Project</h4>
       <form>
@@ -23,24 +23,24 @@
           />
         </div>
 
-      </form>
+      </form> -->
   
-      <button class="badge badge-danger mr-2" (click)="deleteTutorial()">
+      <!-- <button class="badge badge-danger mr-2" (click)="deleteProject()">
         Delete
       </button>
-  
-      <button
+   -->
+      <!-- <button
         type="submit"
         class="badge badge-success mb-2"
         (click)="updateTutorial()"
       >
-        Update
-      </button>
+        Update -->
+      <!-- </button>
       <p>{{ message }}</p>
-    </div>
+    </div> -->
   
-    <div *ngIf="!currentProject.id">
+    <!-- <div *ngIf="!currentProject.id">
       <br />
       <p>Cannot access this Tutorial...</p>
-    </div>
-  </div>
+    </div> -->
+  <!-- </div> -->
