--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,7 +6,7 @@
         <a routerLink="tutorials" class="nav-link">Projects</a>
       </li>
       <li class="nav-item">
-        <a routerLink="add" class="nav-link">Add</a>
+        <a routerLink="addProject" class="nav-link">Add Project</a>
       </li>
     </div>
   </nav>
