Add Device Feature

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,6 +8,9 @@
       <li class="nav-item">
         <a routerLink="addProject" class="nav-link">Add Project</a>
       </li>
+      <li class="nav-item">
+        <a routerLink="addDevice" class="nav-link">Add Device</a>
+      </li>
     </div>
   </nav>
 
