--- a/frontend/src/app/components/tutorials-list/tutorials-list.component.html
+++ b/frontend/src/app/components/tutorials-list/tutorials-list.component.html
@@ -43,6 +43,11 @@
           </span>
         </div>
       </li>
+      <!-- <div>
+        <span class="material-icons" (click)="createDevice()">
+          add
+          </span>
+      </div> -->
     </ul>
   </div>
   <div class="col-md-3">
