--- a/frontend/src/app/components/add-tutorial/add-tutorial.component.html
+++ b/frontend/src/app/components/add-tutorial/add-tutorial.component.html
@@ -1,16 +1,10 @@
 <div>
-    <div class="submit-form">
-        <div class="form-group">
-          <label for="description">Project Name</label>
-          <input
-            class="form-control"
-            id="description"
-            required
-            [(ngModel)]="project.projectName"
-            name="description"
-          />
-        </div>
-  
-        <button (click)="saveProject()" class="btn btn-success">Submit</button>
-      </div>
+  <div class="submit-form">
+    <div class="form-group">
+      <label for="description">Project Name</label>
+      <input class="form-control" id="description" required [(ngModel)]="project.projectName" name="description" />
+    </div>
+
+    <button (click)="saveProject()" class="btn btn-success">Submit</button>
   </div>
+</div>
