--- a/frontend/src/app/components/add-device/add-device.component.html
+++ b/frontend/src/app/components/add-device/add-device.component.html
@@ -1,7 +1,8 @@
 <div>
     <div class="submit-form">
         <div class="form-group">
-            <label for="ip_no">{{projId}}</label><br>
+            <label for="ip_no">Selected Project Name:</label><br>
+            <label for="projName">{{ projName }}</label><br>
             <label for="ip_no">IP No:</label>
             <input class="form-control" id="ip_no" required [(ngModel)]="device.ip_no" name="ip_no" />
         </div>
