--- a/frontend/src/app/components/tutorials-list/tutorials-list.component.html
+++ b/frontend/src/app/components/tutorials-list/tutorials-list.component.html
@@ -29,19 +29,19 @@
         [class.active]="i == currentDeviceIndex" (click)="setActiveDevice(device, i)">
         {{ device.ip_no }}
         <div *ngIf="device.status == 'online'" style="float:right;">
-          <span class='material-icons green'>check_circle</span>
+          <span class='material-icons green' title= "Online">check_circle</span>
         </div>
         <div *ngIf="device.status == 'timeout'" style="float:right;">
-          <span class='material-icons red'>block</span>
+          <span class='material-icons red' title= "Blocked">block</span>
         </div>
         <div *ngIf="device.status == 'pending'" style="float:right;">
-          <span class='material-icons yellow'>check_circle</span>
+          <span class='material-icons yellow' title= "Pending">check_circle</span>
         </div>
         <div *ngIf="device.status == 'confignotfound'" style="float:right;">
-          <span class='material-icons yellow'>block</span>
+          <span class='material-icons yellow'title= "ConfigNotFound">text_snippet</span>
         </div>
         <div *ngIf="device.status == 'timeout'" style="float:right;">
-        <span class="material-icons" (click)="setActiveDevice(device,i);isDeviceActive(device, i)">
+        <span class="material-icons" title= "Resend"(click)="setActiveDevice(device,i);isDeviceActive(device, i)">
           send
           </span>
         </div>
