Add Config Feature Completed

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -11,6 +11,9 @@
       <li class="nav-item">
         <a routerLink="addDevice" class="nav-link">Add Device</a>
       </li>
+      <li class="nav-item">
+        <a routerLink="addConfig" class="nav-link">Add Config</a>
+      </li>
     </div>
   </nav>
 
