--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -14,6 +14,9 @@
       <li class="nav-item">
         <a routerLink="addConfig" class="nav-link">Add Config</a>
       </li>
+      <li class="nav-item">
+        <a routerLink="modifyDevice" class="nav-link">Modify Device</a>
+      </li>
     </div>
   </nav>
 
