Config Link Addition

--- a/frontend/src/app/components/tutorials-list/tutorials-list.component.html
+++ b/frontend/src/app/components/tutorials-list/tutorials-list.component.html
@@ -73,6 +73,9 @@
         {{ currentConfig.configUrl }}
       </div>
       <div>
+        <a href="{{currentConfig.configUrl}}" target="_blank" >Configs</a>
+      </div>
+      <div>
         <label><strong>Device Status:</strong></label>
         {{ currentDevice.status }}
       </div>
