--- a/frontend/src/app/components/tutorials-list/tutorials-list.component.html
+++ b/frontend/src/app/components/tutorials-list/tutorials-list.component.html
@@ -76,6 +76,47 @@
         <a href="{{currentConfig.configUrl}}" target="_blank" >Configs</a>
       </div>
       <div>
+        <label><strong>ConfigUpdateUrl:</strong></label>
+        {{ currentConfig.configUpdateUrl }}
+      </div>
+      <div>
+        <label><strong>ConfigReload:</strong></label>
+        {{ currentConfig.configReload }}
+      </div>
+      <div>
+        <label><strong>LogUrl:</strong></label>
+        {{ currentConfig.logUrl }}
+      </div>
+      <div>
+        <label><strong>LogUpdateUrl:</strong></label>
+        {{ currentConfig.logUpdateUrl }}
+      </div>
+      <div>
+        <label><strong>LogReload:</strong></label>
+        {{ currentConfig.logReload }}
+      </div>
+      <div>
+        <label><strong>ServerLog:</strong></label>
+        {{ currentConfig.serverLog }}
+      </div>
+      <div>
+        <label><strong>Version:</strong></label>
+        {{ currentConfig.version }}
+      </div>
+      <div>
+        <label><strong>CheckStatus:</strong></label>
+        {{ currentConfig.checkStatus }}
+      </div>
+      <div>
+        <label><strong>ConfigurationMD:</strong></label>
+        {{ currentConfig.configurationMD }}
+      </div>
+      <div>
+        <label><strong>GitSource:</strong></label>
+        {{ currentConfig.gitSource }}
+      </div>
+
+      <div>
         <label><strong>Device Status:</strong></label>
         {{ currentDevice.status }}
       </div>
