--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,7 +3,7 @@
     <a href="#" class="navbar-brand">Config Admin Panel</a>
     <div class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a routerLink="tutorials" class="nav-link">Projects</a>
+        <a routerLink="" class="nav-link">Projects</a>
       </li>
       <li class="nav-item">
         <a routerLink="addProject" class="nav-link">Add Project</a>
